# BMC-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  Doxyfile  README.md  copy-resources.sh  fmod-linux.sh  gource-preview.bat  gource-video.bat  opengl-linux.sh
.github/workflows/: cmake-build.yml  cmake-linux.yml  cmake-multi-platform.yml  cmake-single-platform.yml  cmake-windows.yml  codeql.yml  msvc.yml  static.yml
BMC-ENGINE/: CMakeLists.txt  Styling.cpp  Styling.h  main-class.h  main.cpp  main.h
BMC-ENGINE/classes/: ErrorDefinitions.h  ErrorHandler.cpp  ErrorHandler.h  Vector2.h  Vector2.hpp
BMC-ENGINE/classes/errors/: ErrorDefinitions.h  ErrorHandler.cpp  ErrorHandler.h
BMC-ENGINE/classes/lang/: Translator.cpp  Translator.h
BMC-ENGINE/classes/math/: Vector.cpp  Vector.h  Vector2.cpp  Vector2.h
BMC-ENGINE/files/: FileReader.cpp  FileReader.h
BMC-ENGINE/files/image/: ImageLoader.cpp  ImageLoader.h
BMC-ENGINE/rendering/: Texture.cpp  Texture.h
BMC-ENGINE/rendering/debugger/: DebugUtil.cpp  DebugUtil.h  Styling.h
BMC-ENGINE/rendering/graphics/: Camera.cpp  Camera.h  EBO.cpp  EBO.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
BMC-ENGINE/rendering/graphics/buffers/: EBO.cpp  EBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
BMC-ENGINE/rendering/model/: CubeGenerator.cpp  Generators.h
BMC-ENGINE/rendering/shaders/: Shader.cpp  Shader.h
BMC-ENGINE/rendering/shaders/files/default/: fragment.glsl
BMC-ENGINE/rendering/window/: Window.cpp  Window.h
BMC-ENGINE/window/: Window.cpp  Window.h
WindowsInstaller/BMC-Engine-Installer/: Installer.sln
WindowsInstaller/BMC-Engine-Installer/Installer/: Installer.vdproj
cmake/: FindFMOD.cmake  testing.cmake
cool-scripts/: README.md  start-debug.bat
docs/html/: _camera_8h_source.html  _e_b_o_8h_source.html  _error_definitions_8h_source.html  _shader_8h_source.html  _styling_8h_source.html  _texture_8h_source.html  _translator_8h_source.html  _v_a_o_8h_source.html  _v_b_o_8h_source.html  _vector_8h_source.html  _window_8h_source.html  class_debug_settings-members.html  class_debug_settings.html  class_debug_util.html  class_e_b_o-members.html  class_e_b_o.html  class_shader-members.html  class_styler-members.html  class_texture-members.html  class_texture.html  class_translator-members.html  class_translator.html  class_v_a_o-members.html  class_v_a_o.html  class_v_b_o-members.html  class_v_b_o.html  class_vector2-members.html  class_vector2.html  class_vector3-members.html  class_vector3.html  class_window.html  classes.html  classmain-members.html  dir_0bd556187ce881ed63918beb981a8e6a.html  dir_c36b38c3483960dfd65add27bae5e85b.html  dir_f327b460fb995d24ba7e3eb2f1526f28.html  dir_fff9f444a7af4e9803db8f745da12046.html  doxygen_crawl.html  functions.html  functions_func.html  (+3 more)
docs/html/search/: all_0.js  all_4.js  all_8.js  all_9.js  all_a.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_9.js  searchdata.js  variables_0.js  variables_2.js
docs/latex/: _camera_8h_source.tex  _debug_util_8h_source.tex  _e_b_o_8h_source.tex  _error_definitions_8h_source.tex  _error_handler_8h_source.tex  _styling_8h_source.tex  _texture_8h_source.tex  _translator_8h_source.tex  _v_a_o_8h_source.tex  _v_b_o_8h_source.tex  _vector_8h_source.tex  class_cube_generator.tex  class_debug_settings.tex  class_e_b_o.tex  class_shader.tex  class_translator.tex  class_v_a_o.tex  class_v_b_o.tex  class_vector2.tex  class_vector3.tex  class_window.tex  classmain.tex  main-class_8h_source.tex  refman.tex
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/imgui/backends/: imgui_impl_glfw.cpp
resources/img/icon/: source.fla
resources/lang/: en-US.lang  es-ES.lang
resources/shaders/default/: fragment.glsl  vertex.glsl
resources/shaders/light/: fragment.glsl  vertex.glsl
site/: index.html
site/docs/html/: _camera_8h_source.html  _debug_util_8h_source.html  _e_b_o_8h_source.html  _error_definitions_8h_source.html  _error_handler_8h_source.html  _file_reader_8h_source.html  _generators_8h_source.html  _shader_8h_source.html  _styling_8h_source.html  _texture_8h_source.html  _translator_8h_source.html  _v_a_o_8h_source.html  _v_b_o_8h_source.html  _vector_8h_source.html  _window_8h_source.html  annotated.html  class_camera-members.html  class_camera.html  class_cube_generator-members.html  class_cube_generator.html  class_debug_settings-members.html  class_debug_settings.html  class_debug_util-members.html  class_debug_util.html  class_e_b_o.html  class_error_handler-members.html  class_error_handler.html  class_file_reader-members.html  class_file_reader.html  class_shader-members.html  class_shader.html  class_styler-members.html  class_styler.html  class_texture-members.html  class_texture.html  class_translator-members.html  class_translator.html  class_v_a_o-members.html  class_v_a_o.html  class_v_b_o.html  (+26 more)
site/docs/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_4.js  classes_5.js  classes_7.js  functions_1.js  functions_2.js  functions_3.js  (+19 more)
site/docs/latex/: _camera_8h_source.tex  _debug_util_8h_source.tex  _e_b_o_8h_source.tex  _error_definitions_8h_source.tex  _error_handler_8h_source.tex  _file_reader_8h_source.tex  _generators_8h_source.tex  _shader_8h_source.tex  _styling_8h_source.tex  _texture_8h_source.tex  _translator_8h_source.tex  _v_a_o_8h_source.tex  _v_b_o_8h_source.tex  _vector_8h_source.tex  _window_8h_source.tex  annotated.tex  class_camera.tex  class_cube_generator.tex  class_debug_settings.tex  class_debug_util.tex  class_e_b_o.tex  class_error_handler.tex  class_file_reader.tex  class_shader.tex  class_styler.tex  class_texture.tex  class_translator.tex  class_v_a_o.tex  class_v_b_o.tex  class_vector2.tex  class_vector3.tex  class_window.tex  classmain.tex  files.tex  main-class_8h_source.tex  main_8h_source.tex
tests/: CMakeLists.txt  vectors.cpp
